--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 name: Test App
-on: push
+on: workflow_dispatch
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -18,6 +18,7 @@ jobs:
       - name: Deploying the site
         uses: easingthemes/ssh-deploy@main
         with: 
+          ARGS: "-rlgoDzvc -i"
           SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
           REMOTE_HOST: ${{ secrets.HOST }}
           REMOTE_USER: ${{ secrets.SSH_USER }}
